# SlicerPolycysticKidneySeg

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
PolycysticKidneySeg/: CMakeLists.txt  PolycysticKidneySeg.py
PolycysticKidneySeg/Resources/UI/: PolycysticKidneySeg.ui
PolycysticKidneySeg/SlicerPKDIALib/: SegmentationLogic.py  Widget.py
PolycysticKidneySeg/SlicerPKDIALib/pkdia/exams/: exam_genkyst_prod.py
PolycysticKidneySeg/SlicerPKDIALib/pkdia/utils/: modality.py  utils.py
PolycysticKidneySeg/SlicerPKDIALib/pkdia/weights/: PKDIAv1-weights.pth  PKDIAv2-weights.pth
SlicerPKDIA/: CMakeLists.txt  SlicerPKDIA.py
SlicerPKDIA/Resources/UI/: SlicerPKDIA.ui
SlicerPKDIA/SlicerPKDIALib/: InstallLogic.py  SegmentationLogic.py  Widget.py  __init__.py
SlicerPKDIA/SlicerPKDIALib/pkdia/: PKDIA.py  license.md
SlicerPKDIA/SlicerPKDIALib/pkdia/datasets/: __init__.py  dataset_genkyst.py
SlicerPKDIA/SlicerPKDIALib/pkdia/exams/: __init__.py  exam_genkyst_prod.py
SlicerPKDIA/SlicerPKDIALib/pkdia/manage/: __init__.py  manage_genkyst.py
SlicerPKDIA/SlicerPKDIALib/pkdia/nets/: __init__.py  block.py  swinv2Unet.py
SlicerPKDIA/SlicerPKDIALib/pkdia/utils/: __init__.py  utils.py
SlicerPKDIA/Testing/: IntegrationTestCase.py
